# models/Organization.js
@@ -1,0 +1,21 @@
+const mongoose = require('mongoose');
+
+const organizationSchema = new mongoose.Schema({
+    name:{
+        type: String,
+        required: true 
+    },
+    url: String,
+    description:{
+        type: String,
+        required: true 
+    },
+    members : {
+        type: Array,
+        required: true 
+    }
+});
+
+const Organization = mongoose.model('Organization',organizationSchema);
+
+module.exports = Organization;
